test/parallel/forall/task-private-vars/throwing-init-exprs/nonpod-tpvs.good
nonpod-tpvs.chpl:58: In function 'main':
nonpod-tpvs.chpl:61: error: the initialization expression of the task-private variable 'tp1' throws - this is currently not supported for variables of non-POD types
